change fonts and more responsive design

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <title>🎲 DICE GAME 🎲</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" type="image/x-icon" href="img/faviconDice.ico">
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
 
 </head>
 
@@ -31,7 +32,7 @@
         </div>
 
       </div>
-      <button type="button" class="btn btn-dark rollDices">THROW THE DICES</button>
+      <button type="button" class="btn btn-xlg btn-dark rollDices">DICE</button>
     </div>
 
   </section>
