--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <meta charset="UTF-8">
@@ -9,8 +11,7 @@
   <title>🎲 DICE GAME 🎲</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" type="image/x-icon" href="img/faviconDice.ico">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
+  
 
 </head>
 
@@ -32,12 +33,13 @@
         </div>
 
       </div>
-      <button type="button" class="btn btn-xlg btn-dark rollDices">DICE</button>
+      <button type="button" class="btn btn-lg btn-dark rollDices">DICE</button>
     </div>
 
   </section>
   <section #footerSection>
     <div class="footer">
+     <a href="https://github.com/benjamin-kromer"><img class="github-icon" src="img/github.svg" ></a> 
       <p>© Copyright 2020 by Benjamin Kromer</p>
     </div>
   </section>
